--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,7 +21,6 @@ services:
     depends_on:
       database:
         condition: service_healthy
-
   users:
     container_name: users
     env_file:
@@ -44,7 +43,6 @@ services:
     depends_on:
       database:
         condition: service_healthy
-
   learning:
     container_name: learning
     env_file:
@@ -67,6 +65,29 @@ services:
     depends_on:
       database:
         condition: service_healthy
+  
+  curriculum:
+    container_name: curriculum
+    env_file:
+      - ${ENV_FILE}
+    build:
+      target: ${NODE_ENV}
+      context: .
+      dockerfile: apps/curriculum/Dockerfile
+      args:
+        - CURRICULUM_SERVICE_PORT=${CURRICULUM_SERVICE_PORT}
+        - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+        - ENV_FILE=${ENV_FILE}
+    ports:
+      - "${CURRICULUM_SERVICE_PORT}:${CURRICULUM_SERVICE_PORT}"
+    volumes:
+      - .:/usr/src/server
+    command: npx nest start curriculum --watch
+    networks:
+      - local
+    depends_on:
+      database:
+        condition: service_healthy
 
   database:
     container_name: database
@@ -83,7 +104,6 @@ services:
       - "${DATABASE_PORT}:${DATABASE_PORT}"
     networks:
       - local
-
 volumes:
   database:
     driver: local
