--- a/.gitignore
+++ b/.gitignore
@@ -56,7 +56,7 @@ pids
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
 
-prisma-client/
-prisma/prisma-client/*
+/prisma-client/
+
 
 
